envoy/envoy.yaml
static_resources:
  listeners:
  # ingress
  - name: server1_sidecar_listener
    address:
      socket_address:
        # Entrypoint for service through Envoy
        address: 0.0.0.0
        port_value: 5199
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          # used when emitting stats
          stat_prefix: server1_sidecar_hcm_filter
          http_filters:
          - name: envoy.filters.http.router
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router 
          route_config:
            name: server1_sidecar_http_route_config
            virtual_hosts:
            # name used when emitting stats, not imp for routing itself
            - name: server1_sidecar_virtual_host
              domains: 
              - "*"
              routes:
              - name:
                match:
                  prefix: "/"
                route:
                  cluster: server1_service
  clusters:
  - name: server1_service
    type: STRICT_DNS
    lb_policy: ROUND_ROBIN
    load_assignment:
      cluster_name: server1_service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                # reroute to service container in the same K8s deployment
                address: 127.0.0.1
                port_value: 8000
